k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-loadbalancer
  namespace: portfolio
spec:
  type: LoadBalancer
  selector:
    app: portfolio-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 80
    protocol: TCP
