k8s/portfolio-ingress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress-ip
  namespace: portfolio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: portfolio-api-service
            port:
              number: 80
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: ghost-service
            port:
              number: 80
